--- a/src/scss/partials/_modules.scss
+++ b/src/scss/partials/_modules.scss
@@ -13,6 +13,15 @@
     }
 }
 
+h1,h2,h3,h4,h5,h6,.nav-link{
+    font-family: "KaushanScript";
+    letter-spacing: 2px;
+}
+
+header{
+    z-index: 10;
+}
+
 nav{
     z-index: 10;
 }
